Updated project description

--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="An example project to Build and Host Flutter Web on to GitHub Pages and using a secret key">
+  <meta name="description" content="An example project to Build and Host Flutter Web on to GitHub Pages and use of secret keys.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
